--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,35 @@
     <link rel="icon" href="assets/img/heart_vital_signs_icon_146888.ico" />
   </head>
   <body>
-    <h1></h1>
+    <section class="game">
+      <div class="score">
+        <div class="player-score">
+          <h2>Player</h2>
+          <p>0</p>
+        </div>
+        <div class="computer-score">
+          <h2>Computer</h2>
+          <p>0</p>
+        </div>
+      </div>
+
+      <div class="intro">
+        <h1>Rock Paper and Scissors</h1>
+        <button>Let's Play</button>
+      </div>
+
+      <div class="match">
+        <h2 class="winner">Choose an option</h2>
+        <div class="hands">
+          <img class="player-hand" src="assets/img/rock.png" alt="" />
+          <img class="computer-hand" src="assets/img/rock.png" alt="" />
+        </div>
+        <button class="rock">rock</button>
+        <button class="rock">paper</button>
+        <button class="rock">scissors</button>
+      </div>
+    </section>
+
     <script src="bundled.js"></script>
   </body>
 </html>
