--- a/app/index.html
+++ b/app/index.html
@@ -24,18 +24,20 @@
 
       <div class="intro">
         <h1>Rock Paper and Scissors</h1>
-        <button>Let's Play</button>
+        <button class="btn">Let's Play</button>
       </div>
 
-      <div class="match">
+      <div class="match fadeOut">
         <h2 class="winner">Choose an option</h2>
         <div class="hands">
           <img class="player-hand" src="assets/img/rock.png" alt="" />
           <img class="computer-hand" src="assets/img/rock.png" alt="" />
         </div>
-        <button class="rock">rock</button>
-        <button class="rock">paper</button>
-        <button class="rock">scissors</button>
+        <div class="options">
+          <button class="rock btn">rock</button>
+          <button class="paper btn">paper</button>
+          <button class="scissors btn">scissors</button>
+        </div>
       </div>
     </section>
 
