added reset button and included a winner function

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,10 @@
           <button class="scissors btn">scissors</button>
         </div>
       </div>
+
+      <div class="resetGame fadeOut">
+        <button class="reset-btn">Reset</button>
+      </div>
     </section>
 
     <script src="bundled.js"></script>
