--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" href="assets/img/heart_vital_signs_icon_146888.ico" />
+    <link rel="icon" href="assets/images/heart_vital_signs_icon_146888.ico" />
   </head>
   <body>
     <section class="game">
@@ -30,8 +30,8 @@
       <div class="match fadeOut">
         <h2 class="winner">Choose an option</h2>
         <div class="hands">
-          <img class="player-hand" src="assets/img/rock.png" alt="" />
-          <img class="computer-hand" src="assets/img/rock.png" alt="" />
+          <img class="player-hand" src="assets/images/rock.png" alt="" />
+          <img class="computer-hand" src="assets/images/rock.png" alt="" />
         </div>
         <div class="options">
           <button class="rock btn">rock</button>
@@ -45,6 +45,6 @@
       </div>
     </section>
 
-    <script src="bundled.js"></script>
+    
   </body>
 </html>
